--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "redis": "^3.0.2"
   }
 }
